--- a/_sass/_teaching.scss
+++ b/_sass/_teaching.scss
@@ -46,6 +46,6 @@ $teaching-padding: 20px;
   width:         calc(75% - (#{$spacing-unit} / 2));
   margin-left: 0px;
   @include media-query($on-palm) {
-    margin-left: 30px;
+    margin-left: 10px;
   }
 }
